     2v29 : Array.sort: fix issue where *some* sorts of 10+ items could cause the array not to be GC'd
            Bangle.js: Updated built-in Layout.js with some minor fixes
            STM32: Ensure setDeepSleep(1) will only sleep if there are no active PWM outputs
            Pin.getInfo().negated now set if pin negated in firmware
            Timers now have unique IDs (#1444)
            Added `require("timer")` to access timers, removed `E.dumpTimers` and `Pin.writeAtTime` (fix #2586)
            Added ability to execute JS from an a timer with `require("timer").add({type:"EXEC",...)`
            Bangle.js: Add Bangle.setOptions({stepCounterDisabled:bool}) to disable the step counter
            Date: fix parsing of ISO8601 timezones (+HHMM worked, but +HH:MM and +HH added) (fix #2669)
            Bangle.js1: dump() now doesn't write out interpreter state as JS (saves 1.5kB Flash)
            Espruino Pico: Removed 'tv' library by default to free up flash storage
            Fix jshPopIOEventOfType when the event to be popped is right at the start
            STM32: Tidy up WAKEUP timer handling to ensure the Wakeup is always the first item in the queue
            E.defrag now defrags with interrupts enabled (also fix potential crash with 2 flat strings end to end)
            Swap to using locks for watch&timer arrays (uses 4b more RAM, but faster and no defrag issues)
            Bangle.js2: Remove buzz when going back in a menu using the button (not the widget)
            Bangle.js2: Ensure overlays don't use the current Graphics colors
            Bangle.js2: Much faster rendering of overlays
            Bangle.js2: g.flip(2) will now flip the screen *and* the entire area of the overlay
            FAT Filesystem files are now left locked when open, meaning E.defrag can't move them and cause instability
            JIT: jit compiler no longer leaks "jit" keyword (fix #2674)